Removed dependency from sun BaseDecoder/Encoder